--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: eBUSd Add-On
-url: https://github.com/LukasGrebe/ha-addons/
-maintainer: LukasGrebe
+url: https://github.com/sdoe0/ha-addons/
+maintainer: sdoe0
